--- a/per/ma/public/2024-25/students.html
+++ b/per/ma/public/2024-25/students.html
@@ -11,26 +11,27 @@
       margin: 0;
       padding: 0;
     }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f2f5;
       color: #333;
       height: 100vh;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
     }
+
     nav {
       background: #000;
       padding: 1rem;
       display: flex;
       justify-content: center;
       align-items: center;
-      position: absolute;
-      top: 0;
       width: 100%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
+
     nav a {
       color: white;
       margin: 0 1rem;
@@ -38,6 +39,7 @@
       font-weight: bold;
       position: relative;
     }
+
     nav a::after {
       content: '';
       position: absolute;
@@ -48,24 +50,26 @@
       bottom: -4px;
       transition: 0.3s ease;
     }
+
     nav a:hover::after {
       width: 100%;
     }
 
     .container-wrapper {
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
       width: 100%;
-      padding-top: 4rem; /* to avoid nav overlap */
+      padding: 2rem;
     }
 
     .container {
       display: grid;
-      grid-template-columns: repeat(3, 250px);
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 2rem;
-      justify-content: center;
+      width: 90%;
+      max-width: 1200px;
     }
 
     .card {
@@ -76,7 +80,6 @@
       text-align: center;
       transition: all 0.3s ease;
       cursor: pointer;
-      position: relative;
       overflow: hidden;
     }
 
@@ -86,25 +89,34 @@
     }
 
     .card h2 {
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
       color: #222;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
     }
 
     .card i {
-      font-size: 2rem;
+      font-size: 2.5rem;
       margin-bottom: 1rem;
       color: #4a4a4a;
     }
 
-    .year27 {
-      grid-column: 1 / 2;
+    .card p {
+      text-align: justify;
+      font-size: 1rem;
+      line-height: 1.6;
     }
 
-    @media (max-width: 800px) {
-      .container {
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        padding: 1rem;
+    @media (max-width: 600px) {
+      .card {
+        padding: 1.5rem;
+      }
+
+      .card h2 {
+        font-size: 1.4rem;
+      }
+
+      .card i {
+        font-size: 2rem;
       }
     }
   </style>
@@ -122,39 +134,29 @@
 
   <div class="container-wrapper">
     <div class="container">
-      <div class="card"><i class="fas fa-calendar-alt"></i>
-        <h2>House Activities   
-        </h2>
+      <div class="card">
+        <i class="fas fa-calendar-alt"></i>
+        <h2>House Activities</h2>
         <p>
-            The house activities like recitation,story narration, 
-            solo dance were conducted to develop confidence in students.
-            Themes like compassion, acceptance, resilience were taken for 
-            story narration and recitation to align with  the vision. 
-            Activities like sharing affirmations and  Geeta Saar were also 
-            conducted. Quiz club was introduced to cover a few aspects of 
-            intellectual curiosity. Activities like softboard decoration with 
-            theme Indian culture and celebrations like Janmashtami, Dusshera 
-            and Holi helped students to know their culture.
+          The house activities like recitation, story narration, solo dance were conducted to develop confidence in students.
+          Themes like compassion, acceptance, and resilience were chosen for story narration and recitation to align with the vision.
+          Activities like sharing affirmations and Geeta Saar were also conducted.
+          Quiz club was introduced to foster intellectual curiosity.
+          Cultural activities like softboard decoration and celebrations such as Janmashtami, Dussehra, and Holi helped students connect with Indian traditions.
         </p>
-    </div>
-      <div class="card"><i class="fas fa-calendar-check"></i>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-calendar-check"></i>
         <h2>Club Activities</h2>
         <p>
-            In Eco club students participated in Celebrating Vanmahotsav, skit 
-            for traffic awareness and energy conservation which helped them to 
-            know their roles as responsible citizen. To be balanced in life one 
-            should know how to take self care.With this aim sessions on exercise,
-            mental health were organised and activities like precautions in rainy 
-            season, healthy diet,first aid box making were conducted. Took reflection 
-            also. Students visited IDBA and old age.Tried to use technology also where 
-            in students made ppt on energy conservation and videos of parents were 
-            shared with students for salad making. As a part of leveraging choithram 
-            potential  grade 5 students celebrated Vanmahotsav with grade 1 and 2, 
-            distributed badges and took oath, grade 4 students performed song on traffic 
-            awareness for Montessori and save water song with grade 1 and 2,senior students 
-            gave demonstration on eco-friendly colour making.
+          In the Eco club, students participated in Vanmahotsav, skits for traffic awareness, and energy conservation.
+          Sessions on exercise and mental health were organized, along with activities on rainy season precautions, healthy diets, and first aid.
+          Students also visited IDBA and old age homes.
+          They created PowerPoint presentations and watched parent-made videos for salad making.
+          Senior students demonstrated eco-friendly color making, while younger ones took part in singing and skits to promote environmental responsibility.
         </p>
-    </div>
+      </div>
     </div>
   </div>
 </body>
