--- a/per/ma/public/index.html
+++ b/per/ma/public/index.html
@@ -122,18 +122,18 @@
 
   <div class="container-wrapper">
     <div class="container">
-      <div class="card"><i class="fas fa-calendar-alt"></i>
-        <div onclick="location.href='/2024-25/dashboard24.html'"><h2>2024-25</h2></div></div>
-      <div class="card"><i class="fas fa-calendar-check"></i>
-        <div onclick="location.href='/2025-26/dashboard25.html'"><h2>2025-26</h2></div></div>
-      <div class="card"><i class="fas fa-calendar-week"></i>
-        <div onclick="location.href='/2026-27/dashboard26.html'"><h2>2026-27</h2></div></div>
-      <div class="card year27"><i class="fas fa-calendar-day"></i>
-        <div onclick="location.href='/2027-28/dashboard27.html'"><h2>2027-28</h2></div></div>
-      <div class="card"><i class="fas fa-calendar-plus"></i>
-        <div onclick="location.href='/2028-29/dashboard28.html'"><h2>2028-29</h2></div></div>
-      <div class="card"><i class="fas fa-calendar"></i>
-        <div onclick="location.href='/2029-30/dashboard29.html'"><h2>2029-30</h2></div></div>
+        <div onclick="location.href='/2024-25/dashboard24.html'"><div class="card"><i class="fas fa-calendar-alt"></i>
+        <h2>2024-25</h2></div></div>
+        <div onclick="location.href='/2025-26/dashboard25.html'"><div class="card"><i class="fas fa-calendar-check"></i>
+        <h2>2025-26</h2></div></div>
+        <div onclick="location.href='/2026-27/dashboard26.html'"><div class="card"><i class="fas fa-calendar-week"></i>
+        <h2>2026-27</h2></div></div>
+        <div onclick="location.href='/2027-28/dashboard27.html'"><div class="card year27"><i class="fas fa-calendar-day"></i>
+        <h2>2027-28</h2></div></div>
+        <div onclick="location.href='/2028-29/dashboard28.html'"><div class="card"><i class="fas fa-calendar-plus"></i>
+        <h2>2028-29</h2></div></div>
+        <div onclick="location.href='/2029-30/dashboard29.html'"><div class="card"><i class="fas fa-calendar"></i>
+        <h2>2029-30</h2></div></div>
     </div>
   </div>
 </body>
