--- a/per/ma/public/2027-28/myself.html
+++ b/per/ma/public/2027-28/myself.html
@@ -52,6 +52,9 @@
     .nav-links a:hover::after {
       width: 100%;
     }
+    .nav-links a.active {
+      color: #ffd700; /* Gold color for active link */
+    }
     .hamburger {
       display: none;
       flex-direction: column;
@@ -148,7 +151,7 @@
       <a href="/2024-25/dashboard24.html">2024-25</a>
       <a href="/2025-26/dashboard25.html">2025-26</a>
       <a href="/2026-27/dashboard26.html">2026-27</a>
-      <a href="/2027-28/dashboard27.html">2027-28</a>
+      <a href="/2027-28/dashboard27.html"class="active">2027-28</a>
       <a href="/2028-29/dashboard28.html">2028-29</a>
       <a href="/2029-30/dashboard29.html">2029-30</a>
     </div>
